crates/vite_task_plan/tests/plan_snapshots/fixtures/filter-workspace/snapshots/query - filter deps skips packages without task.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&compact_plan"
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/filter-workspace
---
{
  "packages/app#test": [
    "packages/lib#test"
  ],
  "packages/core#test": [],
  "packages/lib#test": [
    "packages/core#test"
  ]
}
