crates/vite_task_plan/tests/plan_snapshots/fixtures/filter-workspace/snapshots/query - filter include and exclude.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&compact_plan"
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/filter-workspace
---
{
  "packages/app#build": [
    "packages/lib#build"
  ],
  "packages/core#build": [],
  "packages/lib#build": [
    "packages/core#build"
  ]
}
