crates/vite_task_plan/tests/plan_snapshots/fixtures/filter-workspace/snapshots/query - filter space-separated in single value.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&compact_plan"
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/filter-workspace
---
{
  "packages/app#build": [],
  "packages/cli#build": []
}
